--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "directories": {
     "lib": "lib"
   },
+  "scripts": {
+    "start": "node  --loader ts-node/esm ./src/bot.ts",
+  },
   "dependencies": {
-    "@drift-labs/sdk": "^0.1.12",
-    "@project-serum/anchor": "^0.19.1-beta.1",
+    "@drift-labs/sdk": "*",
+    "@project-serum/anchor": "*",
     "@solana/web3.js": "^1.31.0",
     "axios": "^0.24.0",
     "bn.js": "^5.2.0",
