--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "lib": "lib"
   },
   "scripts": {
-    "start": "node  --loader ts-node/esm ./src/bot.ts",
+    "start": "node  --loader ts-node/esm ./src/bot.ts"
   },
   "dependencies": {
-    "@drift-labs/sdk": "*",
-    "@project-serum/anchor": "*",
+    "@drift-labs/sdk": "^0.1.30-master.0",
+    "@project-serum/anchor": "^0.23.0",
     "@solana/web3.js": "^1.31.0",
     "axios": "^0.24.0",
     "bn.js": "^5.2.0",
